force-app/main/default/objects/MUSW__Outcome__c/MUSW__Outcome__c.object-meta.xml
<CustomObject>
    <label>Outcome</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>