force-app/main/default/objects/MUSW__Outcome__c/fields/MUSW__Application__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>MUSW__Application2__c</referenceTo>
    <relationshipLabel>Outcomes</relationshipLabel>
    <relationshipName>Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>