force-app/main/default/objects/MUSW__Outcome__c/fields/MUSW__Comment__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Comment__c</fullName>
    <label>Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>