force-app/main/default/objects/MUSW__Outcome__c/fields/MUSW__Proceeding_Agenda_Item__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Proceeding_Agenda_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proceeding Agenda Item</label>
    <referenceTo>MUSW__Proceeding_Agenda_Item__c</referenceTo>
    <relationshipLabel>Outcomes</relationshipLabel>
    <relationshipName>Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>