force-app/main/default/objects/MUSW__Outcome__c/fields/MUSW__Result__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Results</valueSetName>
    </valueSet>
</CustomField>